# samwise-adcs-sims

./: .gitignore  README.md  diagram.drawio  main.py  moment_of_intertia.ipynb  perturbation_torques.ipynb  pyproject.toml  quaternion.py  requirements.txt  simulation.html
Orbit Propogator/: Dockerfile  app.py  lambda_function.py  main.py  requirements.txt
Orbit Propogator/cdk/: app.ts  cdk.json  package-lock.json  package.json
Orbit Propogator/src/: bodies.py  constants.py  dataclasses.py  orbit.py  plot.py  utils.py
examples/: ground_track.py  range_test.py
igrf/: LICENSE.txt  README.md  pyproject.toml
igrf/src/igrf/: CMakeCache.txt  CTestTestfile.cmake  Makefile  __init__.py  cmake_install.cmake  igrf13_driver
igrf/src/igrf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
igrf/src/igrf/tests/: test_mod.py
notebooks/: moment_of_intertia.ipynb  notebook.ipynb  perturbation_torques.ipynb
old_simwise/data_structures/: parameters.py  satellite_state.py
old_simwise/dynamics/: orbital.py
old_simwise/math/: axis_angle.py  frame_transforms.py
old_simwise/sandbox/: J2PertubationMee.py  gravity_gradient.py
old_simwise/simulations/: base.py
old_simwise/utils/: horizons.py  plots.py
old_simwise/world_model/: atmosphere.py
simwise/: README.md  __init__.py  attitude-determination.py  attitude.ipynb  attitude_determination.py  bdot.py  constants.py  drag.py  equinoctial.py  graph_utils.py  magnetic_field.py  main.py  plots.py  propagator.py  quaternion.py  reaction_wheel.py  simulate_orbit.py  simulation.py
simwise.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
simwise/attitude/: attitude_control.py
simwise/control/: attitude_control.py  bdot.py
simwise/data_structures/: parameters.py  satellite_state.py
simwise/dynamics/: __init__.py  attitude.py  eom.py  orbital.py
simwise/forces/: __init__.py  area_projection.py  drag.py  gravity_gradient.py  j2.py
simwise/guidance/: nadir_pointing_only.py  sun_pointing.py
simwise/math/: __init__.py  area_projection.py  axis_angle.py  coordinate_transforms.py  dcm.py  frames.py  rot.py  (+4 more)
test/: equinoctial-tests.py  test_magnetic_field.py
(+78 files in other folders)
